IDLER: improved routing
