# docs/swagger.yaml
@@ -1,11 +1,13 @@
-basePath: /
+basePath: /api/v1
 definitions:
   dto.SignInDTO:
     properties:
       email:
+        example: kill-77@mail.ru
         maxLength: 64
         type: string
       password:
+        example: qwerty
         maxLength: 64
         minLength: 6
         type: string
@@ -16,13 +18,16 @@ definitions:
   dto.SignUpDTO:
     properties:
       email:
+        example: kill-77@mail.ru
         maxLength: 64
         type: string
       name:
+        example: alex
         maxLength: 64
         minLength: 2
         type: string
       password:
+        example: qwerty
         maxLength: 64
         minLength: 6
         type: string
@@ -55,12 +60,18 @@ info:
   title: Idler Application
   version: "1.0"
 paths:
-  /user/profile:
+  /user/{email}:
     get:
       consumes:
       - application/json
-      description: get current profile user
-      operationId: user
+      description: get user by email
+      operationId: userByEmail
+      parameters:
+      - description: User email
+        in: path
+        name: email
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -76,6 +87,34 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/http.errorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: User By Email
+      tags:
+      - user
+  /user/profile:
+    get:
+      consumes:
+      - application/json
+      description: get current profile user
+      operationId: currentUser
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.UserDTO'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/http.errorResponse'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/http.errorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: User Profile
       tags:
       - user
@@ -135,9 +174,7 @@ paths:
       - application/json
       responses:
         "201":
-          description: ok
-          schema:
-            type: string
+          description: ""
         "400":
           description: Bad Request
           schema:
